2006-03-22 J.R. Heisey <jrheisey@sourceforge.com
	* config_win32.h.in, plat/win32/fd2raw.cpp: Created strndup()
	function for Visual Studio build.

2006-03-22 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc:
	Last change cause segv in preferences editor.

2006-03-22 J.R. Heisey <jrheisey@sourceforge.com
	* /src/sim_context.cc: Modified forward declaration of
	get_error_message() to match recent definition change.

2006-03-22 Scott Dattalo <scott@dattalo.com>
	* src/cod.cc, src/pic-instructions.cc, src/processor.cc,
	src/processor.h: 
	Fixed list file processing. Now the file context class knows if it
	owns a .lst file versus a .asm or .inc file. 
	* gui/gui_src.h, gui/gui_src_asm.cc:
	List files are now displayed in the source browser. The program
	counter indicator tracks correctly. Breakpoints can not be
	controlled from within the list file view yet.
	Changed strndup calls to g_strndup. The form is a GNU extension
	while the latter is part of glib, but both do the same thing. This
	removes an OS dependency.

2006-03-21 Scott Dattalo <scott@dattalo.com>
	* gui/gui_object.cc: removed debug printf
	* gui/gui_src_asm.cc: Added a delete_event handler for the source
	browser; killing the source browser window was causing gpsim to
	crash otherwise. 
	The source browser name has been updated to match the old
	browser's name (this is mainly for registry and .gpsim settings).
	Added GTK_WAIT's for slower machines. Apparently gtk's event queue
	is getting overwhelmed while the source browser is being created.
	
2006-03-21 Borut Razem <borut.razem@siol.net>
	* src/cod.cc: fixed bug "[ 1448454 ] usart_test - ERROR: == comparison
	  is not defined for String" by merging "assertions" and "assertions"
	  lists to a single "directive" list

2006-03-20 Scott Dattalo <scott@dattalo.com>
	* regression/breakpoints.asm: Embedded script error was causing
	regression test to fail. 
	* regression/rt.sh: Minor fix to Borut's regression test